# dovenest

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  rustfmt.toml
docs/: dovenest-ar.md  dovenest-de.md  dovenest-en.md  dovenest-es.md  dovenest-id.md  dovenest-tr.md  dovenest-zh.md
dovenest/: Cargo.toml
dovenest-cli/: Cargo.toml
dovenest-cli/src/: main.rs
dovenest/src/: lib.rs
