[package]
name = "dovenest-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
dovenest = { path = "../dovenest" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"          # nur für StreamExt::next()

[[bin]]
name = "coo"
path = "src/main.rs"
